Project1/force-app/main/default/objects/Post__c/Post__c.object-meta.xml
<CustomObject>
    <description>A Topical Post to a community by a user with a score and either rich text or a url</description>
    <label>Post</label>
    <nameField>
        <label>Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>