Project1/force-app/main/default/objects/Post__c/fields/Aggregate_Score__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Score__c</fullName>
    <label>Aggregate Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>