Project1/force-app/main/default/objects/Post__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <description>The community the post is posted to</description>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>