Project1/force-app/main/default/objects/Post__c/fields/Essay__c.field-meta.xml
<CustomField>
    <fullName>Essay__c</fullName>
    <description>The content of a text post</description>
    <label>Essay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>