Project1/force-app/main/default/objects/Post__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <description>The link to the content</description>
    <label>External Link</label>
    <type>Url</type>
</CustomField>