Project1/force-app/main/default/objects/Post__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Demographic_Group__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>