Project1/force-app/main/default/objects/Post__c/fields/Incidents__c.field-meta.xml
<CustomField>
    <fullName>Incidents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incidents</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>