Project1/force-app/main/default/objects/Post__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topics</label>
    <referenceTo>Topic_of_Concern__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>