Project1/force-app/main/default/objects/Post__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>For internal use</description>
    <label>Internal</label>
</RecordType>