Project1/force-app/main/default/objects/Post__c/validationRules/Include_Image.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_Image</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &apos;Image&apos; ) &amp;&amp;  ISNULL(External_Link__c)</errorConditionFormula>
    <errorDisplayField>External_Link__c</errorDisplayField>
    <errorMessage>Image posts must include image link</errorMessage>
</ValidationRule>