Project1/force-app/main/default/objects/Post__c/validationRules/Include_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_Text</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &apos;Text&apos; ) &amp;&amp;  ISNULL( Essay__c )</errorConditionFormula>
    <errorDisplayField>Essay__c</errorDisplayField>
    <errorMessage>Text Posts must include content</errorMessage>
</ValidationRule>