Project1/force-app/main/default/objects/Post__c/validationRules/Include_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_URL</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &apos;URL&apos; ) &amp;&amp;  ISNULL(External_Link__c)</errorConditionFormula>
    <errorDisplayField>External_Link__c</errorDisplayField>
    <errorMessage>Link posts must include link</errorMessage>
</ValidationRule>