Project1/force-app/main/default/objects/Post__c/listViews/Big_Hero_6.listView-meta.xml
<ListView>
    <fullName>Big_Hero_6</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community__c</field>
        <operation>equals</operation>
        <value>Big Hero 6</value>
    </filters>
    <label>Big Hero 6</label>
</ListView>