Project1/force-app/main/default/objects/Post__c/listViews/Rev_Your_Engines.listView-meta.xml
<ListView>
    <fullName>Rev_Your_Engines</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community__c</field>
        <operation>equals</operation>
        <value>Rev Your Engines</value>
    </filters>
    <label>Rev Your Engines</label>
</ListView>