Project1/force-app/main/default/objects/Post__c/listViews/Vanquish.listView-meta.xml
<ListView>
    <fullName>Vanquish</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community__c</field>
        <operation>equals</operation>
        <value>Vanquish</value>
    </filters>
    <label>Vanquish</label>
</ListView>